# kbkitt

./: .gitignore  README.md
.github/workflows/: build-test-image.yaml  commitlint.yaml  kbcli-quality.yaml
apps/kbcli/: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Makefile  README.md  build.mk  coverage.out  go.mod  go.sum  run.mk  vars.mk
apps/kbcli/.githooks/: commit-msg  pre-commit  pre-push
apps/kbcli/cmd/kbcli/: main.go
apps/kbcli/conf/samples/: config.yaml
apps/kbcli/internal/cmds/: add.go  configure.go  get.go  import.go  model.go  root.go  sync.go  version.go
apps/kbservice/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
apps/kbservice/migrations/: 20240503161844_create_kb_table.down.sql  20240503161844_create_kb_table.up.sql  20240505163414_create_index_for_tags.down.sql  20240505163414_create_index_for_tags.up.sql  20240505164015_create_categories_table.down.sql  20240505164015_create_categories_table.up.sql
apps/kbservice/src/: adapters.rs  application.rs  kbs.rs  lib.rs  main.rs  types.rs
apps/kbservice/src/adapters/: mod.rs  pgstorage.rs
apps/kbservice/src/adapters/pgstorage/: mod.rs  pgdb.rs  pgdb_test.rs
apps/kbservice/src/application/: app.rs  mod.rs  transport.rs
apps/kbservice/src/errors/: error.rs
apps/kbservice/src/kbs/: handler.rs  handler_test.rs  mod.rs  service.rs  service_test.rs  storage.rs
apps/kbservice/src/types/: categories.rs  configuration.rs  configuration_test.rs  kbs.rs  kbs_tests.rs  mod.rs
docs/samples/: import-sample.yaml
(+26 files in other folders)
