[package]
name = "kbservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
serde_json = "1.0.117"
hyper = "0.14.28"
log = { version = "0.4.21", features = ["kv_unstable"] }
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
uuid = { version = "1.8.0", features = ["v4"] }
warp = "0.3.7"
